--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 		<figure class="snip1584"><img src="images/eiffel.jpg" alt="eiffel"/>
 			<figcaption>
 			<h3>France</h3>
-			<h5>The reasons of French has related to English</h5>
+			<h5>Alasan Bahasa Prancis lekat dengan Bahasa Inggris</h5>
 			</figcaption><a href="#"></a>
 		</figure>
 		<figure class="snip1584"><img src="images/ielts.jpg" alt="ielts"/>
 			<figcaption>
 			<h3>IELTS</h3>
-			<h5>Where IELTS could take you?</h5>
+			<h5>Kemana IELTS dapat membawamu?</h5>
 			</figcaption><a href="#"></a>
 		</figure>
 		<figure class="snip1584"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample120.jpg" alt="sample120"/>
@@ -230,6 +230,22 @@
 		<p>Copyright & copy; 2019 - Awesome Course</p>
 	</div>
 	<!-- End Copyright -->
+
+	<!-- Start Whatsapp -->
+	<script type="text/javascript">
+		(function () {
+			var options = {
+				whatsapp: "+6285260419066", // WhatsApp number
+				call_to_action: "Message us", // Call to action
+				position: "right", // Position may be 'right' or 'left'
+			};
+			var proto = document.location.protocol, host = "whatshelp.io", url = proto + "//static." + host;
+			var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
+			s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
+			var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+		})();
+	</script>
+	<!-- End Whatsapp-->
 </body>
 </html>
 	
