--- a/index.html
+++ b/index.html
@@ -232,11 +232,12 @@
 	<!-- End Copyright -->
 
 	<!-- Start Whatsapp -->
+	<!-- WhatsHelp.io widget -->
 	<script type="text/javascript">
 		(function () {
 			var options = {
 				whatsapp: "+6285260419066", // WhatsApp number
-				call_to_action: "Message us", // Call to action
+				call_to_action: "Text us", // Call to action
 				position: "right", // Position may be 'right' or 'left'
 			};
 			var proto = document.location.protocol, host = "whatshelp.io", url = proto + "//static." + host;
@@ -245,6 +246,7 @@
 			var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
 		})();
 	</script>
+	<!-- /WhatsHelp.io widget -->
 	<!-- End Whatsapp-->
 </body>
 </html>
