--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		Cara Cepat Belajar Bahasa Inggris - Awesome Course
 	</title>
 	<meta name="description" content="Kursus Mahir Bahasa Inggris dalam seminggu">
-
+	<link rel="shortcut icon" type="image/favicon.png" href="/favicon.png"/>
 	<!-- Start CSS -->
 	<link rel="stylesheet" href="styles/style.css">
 	<!-- End CSS -->
