--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>
-		Cara Cepat Belajar Bahasa Inggris - Awesome Course
+		Cara Cepat Belajar Bahasa Inggris - Habel Course
 	</title>
 	<meta name="description" content="Kursus Mahir Bahasa Inggris dalam seminggu">
 	<link rel="shortcut icon" type="image/favicon.png" href="/favicon.png"/>
@@ -20,14 +20,14 @@
 <body>
 	<!-- Start Logo -->
 	<div class="container logo">
-		<a href="index.html" title="Logo Awesome Course">
-			<img src="images/belajar-bahasa-inggris.jpg" alt="Gambar Logo Belajar" width="200">
+		<a href="index.html" title="Logo Habel Course">
+			<img src="images/belajar-bahasa-inggris.jpg" alt="Gambar Logo Belajar" width="300">
 		</a>
 	</div>
 	<!-- End Logo -->
 
 	<!-- Start Menu Primer -->
-	<div class="container menu-primer">
+	<div class="container menu-primer"> <a href="index.html" title="Beranda" class="menu-border">Beranda</a>
 		<ul>
 			<li><a href="index.html" title="Beranda" class="active">Beranda</a>
 			</li>
@@ -49,31 +49,37 @@
 
 	<!-- Start Jumbotron -->
 	<div class="container jumbotron">
-		<h1>Selamat Datang di Awesome Course</h1>
-		<h3>Awesome course adalah tempat belajar bahasa Inggris pertama yang menawarkan ilmu secara ringan dalam seminggu.</h3>
+		<h1>Selamat Datang di Habel Course</h1>
+		<h3>Habel course adalah tempat belajar bahasa Inggris pertama yang menawarkan ilmu secara ringan.</h3>
 	</div>
 	<!-- End Jumbotron -->
 
 	<!-- Start Wow Factor -->
 	<div class="container">
-		<figure class="snip1584"><img src="images/eiffel.jpg" alt="eiffel"/>
+		<figure class="snip1456"><img src="images/independence-day.jpg" alt="independence-day" />
+			<div class="title">
+			  <div>
+				<h2>HAPPY INDEPENDENCE DAY</h2>
+				<h4>CELEBRATE YOUR INDEPENDENCE EXTRA 21% OFF</h4>
+			  </div>
+			</div>
 			<figcaption>
-			<h3>France</h3>
-			<h5>Alasan Bahasa Prancis lekat dengan Bahasa Inggris</h5>
-			</figcaption><a href="#"></a>
+			  <p>Khusus bagi peserta yang mendaftar dibulan Agustus</p>
+			</figcaption>
+			<a href="#"></a>
 		</figure>
-		<figure class="snip1584"><img src="images/ielts.jpg" alt="ielts"/>
+		<figure class="snip1456"><img src="images/ielts.jpg" alt="ielts" />
+			<div class="title">
+			  <div>
+				<h2>OUR NEW PROGRAM</h2>
+				<h4>IELTS PREPARATION CLASS</h4>
+			  </div>
+			</div>
 			<figcaption>
-			<h3>IELTS</h3>
-			<h5>Kemana IELTS dapat membawamu?</h5>
-			</figcaption><a href="#"></a>
-		</figure>
-		<figure class="snip1584"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample120.jpg" alt="sample120"/>
-			<figcaption>
-			<h3>Caspian Bellevedere</h3>
-			<h5>Accounting</h5>
-			</figcaption><a href="#"></a>
-		</figure>
+			  <p>Kelas yang paling ditunggu-tunggu bagi para pencari beasiswa</p>
+			</figcaption>
+			<a href="#"></a>
+		</figure>			  
 	</div>
 	<!-- End Wow Factor -->
 	
@@ -163,14 +169,14 @@
 	<div class="container-full menu-sekunder">
 		<div class="container">
 
-			<!-- Start Awesome Course -->
+			<!-- Start Habel Course -->
 			<div class="menu-sekunder-one">
-				<h4>Awesome Course</h4>
-				<p>Awesome course adalah tempat belajar bahasa Inggris pertama yang menawarkan ilmu secara ringan dalam seminggu.</p>
-				<p>Email: <a href="mailto:admin@awesomecourse.com" title="admin@awesomecourse.com">admin@awesomecourse.com</a></p>
+				<h4>Habel Course</h4>
+				<p>Habel course adalah tempat belajar bahasa Inggris pertama yang menawarkan ilmu secara ringan dalam seminggu.</p>
+				<p>Email: <a href="mailto:admin@Habelcourse.com" title="admin@Habelcourse.com">admin@Habelcourse.com</a></p>
 				<p>Whatsapp: 085260419066 <a href="tel:+6252-604-1906-6" title="+6252-604-1906-6">tel:+6252-604-1906-6</a></p>
 			</div>
-			<!-- End Awesome Course -->
+			<!-- End Habel Course -->
 
 			<!-- Start Menu -->
 			<div class="menu-sekunder-two">
@@ -206,17 +212,17 @@
 				<h4>Media Sosial</h4>
 				<ul>
 					<li>
-						<a href="https://facebook.com/" title="Facebook - Awesome Course">
-							<img src="images/logo-facebook.png" alt="Logo Facebook" width="30">Facebook - Awesome Course
+						<a href="https://facebook.com/" title="Facebook - Habel Course">
+							<img src="images/logo-facebook.png" alt="Logo Facebook" width="30">Facebook - Habel Course
 						</a>
 					</li>
 					<li>
-						<a href="https://www.instagram.com/" title="Instagram - Awesome Course">
-							<img src="images/logo-instagram.png" alt="Logo Instagram" width="30">Instagram - Awesome Course
+						<a href="https://www.instagram.com/" title="Instagram - Habel Course">
+							<img src="images/logo-instagram.png" alt="Logo Instagram" width="30">Instagram - Habel Course
 					</li>
 					<li>
-						<a href="https://www.twitter.com/" title="Twitter - Awesome Course">
-							<img src="images/logo-twitter.png" alt="Logo twitter" width="30">Twitter - Awesome Course
+						<a href="https://www.twitter.com/" title="Twitter - Habel Course">
+							<img src="images/logo-twitter.png" alt="Logo twitter" width="30">Twitter - Habel Course
 						</li>
 				</ul>
 			</div>
@@ -227,7 +233,7 @@
 
 	<!-- Start Copyright -->
 	<div class="container copyright">
-		<p>Copyright & copy; 2019 - Awesome Course</p>
+		<p>Copyright & copy; 2019 - Habel Course</p>
 	</div>
 	<!-- End Copyright -->
 
