--- a/article.html
+++ b/article.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>
-		Cara Cepat Belajar Bahasa Inggris - Awesome Course
+		Cara Cepat Belajar Bahasa Inggris - Habel Course
 	</title>
 	<meta name="description" content="Kursus Mahir Bahasa Inggris dalam seminggu">
 
@@ -17,7 +17,7 @@
 <body>
 	<!-- Start Logo -->
 	<div class="container logo">
-		<a href="index.html" title="Logo Awesome Course">
+		<a href="index.html" title="Logo Habel Course">
 			<img src="images/belajar-bahasa-inggris.jpg" alt="Gambar Logo Belajar" width="200">
 		</a>
 	</div>
@@ -46,8 +46,8 @@
 
 	<!-- Start Jumbotron -->
 	<div class="container jumbotron">
-		<h1>Article Awesome Course</h1>
-		<h3>Awesome course adalah tempat belajar bahasa Inggris pertama yang menawarkan ilmu secara ringan dalam seminggu.</h3>
+		<h1>Article Habel Course</h1>
+		<h3>Habel course adalah tempat belajar bahasa Inggris pertama yang menawarkan ilmu secara ringan.</h3>
 	</div>
 	<!-- End Jumbotron -->
 
@@ -61,6 +61,12 @@
 				</h4>
 			</div>
 			<div class="box-isi">
+			<h2>
+				<a href="" title="How to fix your grammar errors?">How to fix your grammar errors?</a>
+			</h2>
+			<p>This video explain clearly about your grammar errors and how to fix it. let's watch it together!</p>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/XnrAM9QZ90U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			
 			<h2>
 				<a href="" title="The Impact of Allowing Students To Listen The Music While Learning">The Impact of Allowing Students To Listen The Music While Learning</a>
 			</h2>
@@ -115,14 +121,14 @@
 	<div class="container-full menu-sekunder">
 			<div class="container">
 	
-				<!-- Start Awesome Course -->
+				<!-- Start Habel Course -->
 				<div class="menu-sekunder-one">
-					<h4>Awesome Course</h4>
-					<p>Awesome course adalah tempat belajar bahasa Inggris pertama yang menawarkan ilmu secara ringan dalam seminggu.</p>
-					<p>Email: <a href="mailto:admin@awesomecourse.com" title="admin@awesomecourse.com">admin@awesomecourse.com</a></p>
+					<h4>Habel Course</h4>
+					<p>Habel course adalah tempat belajar bahasa Inggris pertama yang menawarkan ilmu secara ringan dalam seminggu.</p>
+					<p>Email: <a href="mailto:admin@Habelcourse.com" title="admin@Habelcourse.com">admin@Habelcourse.com</a></p>
 					<p>Whatsapp: 085260419066 <a href="tel:+6252-604-1906-6" title="+6252-604-1906-6">tel:+6252-604-1906-6</a></p>
 				</div>
-				<!-- End Awesome Course -->
+				<!-- End Habel Course -->
 	
 				<!-- Start Menu -->
 				<div class="menu-sekunder-two">
@@ -158,17 +164,17 @@
 					<h4>Media Sosial</h4>
 					<ul>
 						<li>
-							<a href="https://facebook.com/" title="Facebook - Awesome Course">
-								<img src="images/logo-facebook.png" alt="Logo Facebook" width="30">Facebook - Awesome Course
+							<a href="https://facebook.com/" title="Facebook - Habel Course">
+								<img src="images/logo-facebook.png" alt="Logo Facebook" width="30">Facebook - Habel Course
 							</a>
 						</li>
 						<li>
-							<a href="https://www.instagram.com/" title="Instagram - Awesome Course">
-								<img src="images/logo-instagram.png" alt="Logo Instagram" width="30">Instagram - Awesome Course
+							<a href="https://www.instagram.com/" title="Instagram - Habel Course">
+								<img src="images/logo-instagram.png" alt="Logo Instagram" width="30">Instagram - Habel Course
 						</li>
 						<li>
-							<a href="https://www.twitter.com/" title="Twitter - Awesome Course">
-								<img src="images/logo-twitter.png" alt="Logo twitter" width="30">Twitter - Awesome Course
+							<a href="https://www.twitter.com/" title="Twitter - Habel Course">
+								<img src="images/logo-twitter.png" alt="Logo twitter" width="30">Twitter - Habel Course
 							</li>
 					</ul>
 				</div>
@@ -179,7 +185,7 @@
 	
 		<!-- Start Copyright -->
 		<div class="container copyright">
-			<p>Copyright & copy; 2019 - Awesome Course</p>
+			<p>Copyright & copy; 2019 - Habel Course</p>
 		</div>
 		<!-- End Copyright -->
 	</body>
