--- a/layanan.html
+++ b/layanan.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>
-		Cara Cepat Belajar Bahasa Inggris - Awesome Course
+		Cara Cepat Belajar Bahasa Inggris - Habel Course
 	</title>
 	<meta name="description" content="Kursus Mahir Bahasa Inggris dalam seminggu">
 
@@ -17,7 +17,7 @@
 <body>
 <!-- Start Logo -->
 	<div class="container logo">
-		<a href="index.html" title="Logo Awesome Course">
+		<a href="index.html" title="Logo Habel Course">
 			<img src="images/belajar-bahasa-inggris.jpg" alt="Gambar Logo Belajar" width="200">
 		</a>
 	</div>
@@ -46,8 +46,8 @@
 
 	<!-- Start Jumbotron -->
 	<div class="container jumbotron">
-		<h1>Layanan Awesome Course</h1>
-		<h3>Awesome course adalah tempat belajar bahasa Inggris pertama yang menawarkan ilmu secara ringan dalam seminggu.</h3>
+		<h1>Layanan Habel Course</h1>
+		<h3>Habel course adalah tempat belajar bahasa Inggris pertama yang menawarkan ilmu secara ringan.</h3>
 	</div>
 	<!-- End Jumbotron -->
 
@@ -124,14 +124,14 @@
 	<div class="container-full menu-sekunder">
 			<div class="container">
 	
-				<!-- Start Awesome Course -->
+				<!-- Start Habel Course -->
 				<div class="menu-sekunder-one">
-					<h4>Awesome Course</h4>
-					<p>Awesome course adalah tempat belajar bahasa Inggris pertama yang menawarkan ilmu secara ringan dalam seminggu.</p>
-					<p>Email: <a href="mailto:admin@awesomecourse.com" title="admin@awesomecourse.com">admin@awesomecourse.com</a></p>
+					<h4>Habel Course</h4>
+					<p>Habel course adalah tempat belajar bahasa Inggris pertama yang menawarkan ilmu secara ringan dalam seminggu.</p>
+					<p>Email: <a href="mailto:admin@Habelcourse.com" title="admin@Habelcourse.com">admin@Habelcourse.com</a></p>
 					<p>Whatsapp: 085260419066 <a href="tel:+6252-604-1906-6" title="+6252-604-1906-6">tel:+6252-604-1906-6</a></p>
 				</div>
-				<!-- End Awesome Course -->
+				<!-- End Habel Course -->
 	
 				<!-- Start Menu -->
 				<div class="menu-sekunder-two">
@@ -167,17 +167,17 @@
 					<h4>Media Sosial</h4>
 					<ul>
 						<li>
-							<a href="https://facebook.com/" title="Facebook - Awesome Course">
-								<img src="images/logo-facebook.png" alt="Logo Facebook" width="30">Facebook - Awesome Course
+							<a href="https://facebook.com/" title="Facebook - Habel Course">
+								<img src="images/logo-facebook.png" alt="Logo Facebook" width="30">Facebook - Habel Course
 							</a>
 						</li>
 						<li>
-							<a href="https://www.instagram.com/" title="Instagram - Awesome Course">
-								<img src="images/logo-instagram.png" alt="Logo Instagram" width="30">Instagram - Awesome Course
+							<a href="https://www.instagram.com/" title="Instagram - Habel Course">
+								<img src="images/logo-instagram.png" alt="Logo Instagram" width="30">Instagram - Habel Course
 						</li>
 						<li>
-							<a href="https://www.twitter.com/" title="Twitter - Awesome Course">
-								<img src="images/logo-twitter.png" alt="Logo twitter" width="30">Twitter - Awesome Course
+							<a href="https://www.twitter.com/" title="Twitter - Habel Course">
+								<img src="images/logo-twitter.png" alt="Logo twitter" width="30">Twitter - Habel Course
 							</li>
 					</ul>
 				</div>
@@ -188,7 +188,7 @@
 	
 		<!-- Start Copyright -->
 		<div class="container copyright">
-			<p>Copyright & copy; 2019 - Awesome Course</p>
+			<p>Copyright & copy; 2019 - Habel Course</p>
 		</div>
 		<!-- End Copyright -->
 </body>
